--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: ekart-deployment
+  name: ekart-deployment-test
 spec:
   selector:
     matchLabels:
